// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser-markdown > should parse fixtures ../tests/fixtures/block.code.01.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "[",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "code",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 1,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 2,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "const",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "sum",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "=",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "(",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "a",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "b",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ")",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "=",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ">",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "a",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "+",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 3,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 4,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "const",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "result",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "=",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "sum",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "(",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "1",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "2",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 5,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 6,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "[",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "/",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "code",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/bold.01.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "This",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "text",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "is",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "**",
          },
          "type": "OpenBold",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "bold",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/content.01.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "level": 1,
      "value": "Content 01",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 1,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 2,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "Lorem",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "ipsum",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "dolor",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "sit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "amet",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "consectetur",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "adipiscing",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "elit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "Phasellus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "finibus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "turpis",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "eu",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "mauris",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "commodo",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "ac",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "porta",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "lacus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 2,
          "data": {
            "value": "vehicula",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 3,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 4,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "Praesent",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "sed",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "leo",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "sapien",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "In",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "eu",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "aliquam",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "nunc",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "non",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "rutrum",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 4,
          "data": {
            "value": "lectus",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 5,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 6,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "Cras",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "pharetra",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "velit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "odio",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "sit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "amet",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "sollicitudin",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "lorem",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "gravida",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 6,
          "data": {
            "value": "ut",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 7,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 8,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "Sed",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "non",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "sem",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "purus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "Donec",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "cursus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "at",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "elit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "vulputate",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 8,
          "data": {
            "value": "commodo",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 9,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 10,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "Curabitur",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "venenatis",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "justo",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "eu",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "risus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "maximus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "viverra",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "Morbi",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "ligula",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "magna",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "semper",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "nec",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "tincidunt",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "in",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "accumsan",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "non",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 10,
          "data": {
            "value": "nulla",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
  MarkdownNode {
    "_parentId": 11,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 12,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "Etiam",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "ut",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "vehicula",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "ipsum",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "Vivamus",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "viverra",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "odio",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "eu",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "auctor",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "pharetra",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": ".",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "Sed",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "elit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "nunc",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "viverra",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "id",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "gravida",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "ut",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": ",",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "convallis",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "blandit",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 12,
          "data": {
            "value": "sem",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/heading.01.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "level": 3,
      "value": "Title",
    },
    "type": "Heading",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/heading.02.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "level": 1,
      "value": "Hello 123",
    },
    "type": "Heading",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/heading.03.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "level": 1,
      "value": "Heading 1",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 1,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 2,
    "data": {
      "level": 2,
      "value": "Heading 2",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 3,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 4,
    "data": {
      "level": 3,
      "value": "Heading 3",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 5,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 6,
    "data": {
      "level": 4,
      "value": "Heading 4",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 7,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 8,
    "data": {
      "level": 5,
      "value": "Heading 5",
    },
    "type": "Heading",
  },
  MarkdownNode {
    "_parentId": 9,
    "data": {
      "value": "
",
    },
    "type": "BreakLine",
  },
  MarkdownNode {
    "_parentId": 10,
    "data": {
      "level": 6,
      "value": "Heading 6",
    },
    "type": "Heading",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/html.tag.b.01.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "raw": "<b>",
      "value": "b",
    },
    "type": "OpenHTMLTag",
  },
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Hello",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/html.tag.b.02.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Hello",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "raw": "<b>",
            "value": "b",
          },
          "type": "OpenHTMLTag",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Will",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Smith",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;

exports[`parser-markdown > should parse fixtures ../tests/fixtures/html.tag.b.03.md 1`] = `
[
  MarkdownNode {
    "_parentId": 0,
    "data": {
      "children": [
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Hello",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "raw": "<b>",
            "value": "b",
          },
          "type": "OpenHTMLTag",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Will",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "Smith",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "raw": "</b>",
            "value": "b",
          },
          "type": "CloseHTMLTag",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "\\\\",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "n",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "How",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "are",
          },
          "type": "Word",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": " ",
          },
          "type": "WhiteSpace",
        },
        MarkdownNode {
          "_parentId": 0,
          "data": {
            "value": "you",
          },
          "type": "Word",
        },
      ],
    },
    "type": "Paragraph",
  },
]
`;
